--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,7 @@ jobs:
     - name: Build latest
       run: docker build -t registry.digitalocean.com/olsen/asa-oppgave:$(echo $GITHUB_SHA | head -c7) .
 
+    - name: Build latest
+      run: docker push registry.digitalocean.com/olsen/asa-oppgave:$(echo $GITHUB_SHA | head -c7)   
+
     ##Add step for pusing to registry.digitalocean.com/olsen
