--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,19 +20,7 @@ jobs:
     - name: Build latest
       run: docker build -t registry.digitalocean.com/olsen/asa-oppgave:$(echo $GITHUB_SHA | head -c7) .
 
-    - name: Push latest
-      run: docker push registry.digitalocean.com/olsen/asa-oppgave:$(echo $GITHUB_SHA | head -c7)  
-   
-    - name: Set up kubectl
-      uses: matootie/dokube@v1.3.4
-      with:
-        personalAccessToken: ${{ secrets.DIGITAL_OCEAN_TOKEN }}
-        clusterName: k8s-miles
-
-    - name: Update deployment file
-      run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/olsen/asa-oppgave:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
-
-    - name: Deploy to Kubernetes
-      run: kubectl apply -f config/deployment.yml    
+    - name: Build latest
+      run: docker push registry.digitalocean.com/olsen/asa-oppgave:$(echo $GITHUB_SHA | head -c7)   
 
     ##Add step for pusing to registry.digitalocean.com/olsen
