--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,9 @@ jobs:
         personalAccessToken: ${{ secrets.DIGITAL_OCEAN_TOKEN }}
         clusterName: k8s-miles     
 
+    - name: Update deployment file
+      run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/olsen/asa-oppgave:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
+
+    - name: Deploy to Kubernetes
+      run: kubectl apply -f config/deployment.yml
     ##Add step for pusing to registry.digitalocean.com/olsen
