--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Build latest
       run: docker build -t registry.digitalocean.com/olsen/asa-oppgave:$(echo $GITHUB_SHA | head -c7) .
 
-    - name: Build latest
+    - name: Build Push
       run: docker push registry.digitalocean.com/olsen/asa-oppgave:$(echo $GITHUB_SHA | head -c7)   
 
     - name: Set up kubectl
@@ -34,5 +34,5 @@ jobs:
 
     - name: Deploy to Kubernetes
       run: kubectl apply -f config/deployment.yml
-      
+
     ##Add step for pusing to registry.digitalocean.com/olsen
