--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,17 @@ jobs:
     - name: Deploy to Kubernetes
       run: kubectl apply -f config/deployment.yml
 
-    ##Add step for pusing to registry.digitalocean.com/olsen
+    - name: Deploy Service
+      run: kubectl apply -f config/service.yml
+
+    - name: Deploy Ingress
+      run: kubectl apply -f config/ingress.yml
+  
+    - name: Check status
+      run: kubectl rollout status deployment/asa-oppgave -n apps    
+
+    - name: Remove old containers
+      uses: ripplr-io/docr-image-remove@v1
+      with:
+        image_repository: registry.digitalocean.com/olsen/asa-oppgave
+        buffer_size: 2      
